$Id$

GENERAL:
- Creating library 'BTS'.
- Creating library 'BTF'.

CPE:
- Adapting to Metrowerks Codewarrior

STR:
- Adding 'Insert()' method.

--------
20030104
--------

GENERAL:
- Adding 'CCH'.
- Adding 'SMA' to use in 'CCH'.
- Adding portable data types.
- Adding 'HTP' library.
- Introducing '_' prefix for internal/intermediate classes.
- Creating library 'IDS'.

AEM:
- Adding portable versions of classes.

BCH:
- Adding portable versions of classes.
- Adding 'bunch___'.
- Adapting to the new 'AUTO(x)' macros.
- Fixing spelling error.

BITBCH:
- Adapting to the new 'AUTO(x)' macros.

BSO:
- Adding the 'sign__' type.
- Adding the portable ('p_...') types.
- Removing old unused code.
- Force 'sign__' to contain only -1,0,1.

BTR:
- Adapting to the new 'AUTO(x)' macros.
- Renaming of classes and methods.

CPE:
- Adding 'CPE__USE_[VC|GCC]_WORKAROUND'.

CTN:
- Adding 'reset()' method to the item-related objects.
- Renaming to 'Sync' where needed.
- Adding GCC workaround.
- Adding VC++ workaround.
- Adapting to the new 'AUTO(x)' macros.

DTR:
- Adapting to changes in 'que'.
- Adapting to the new 'AUTO(x)' macros.
- Adapting to changes in 'BTR' library.

EPSMSC:
- Removing IDEALX-related text.
- Adding Epeios text.

ERR:
- Adding external error (ERRX, ext).
- Changing 'brk' to 'bkd'.
- Adding 'bInexistentData' for 'bkd' error.
- Adding debugging feature.

FLM:
- Using now the UNIX system calls under UNIX instead of the C/C++ call (which seems bugged).
- Using low-level io functions under Windows instead of the C/C++ call.
- Adding a static part for standardization.

FLW:
- Fixing bug which fills the cache even if there is asked for more then the cache can contain.
- Adding length feature.
- 'data__' type renamed in 'datum__'.
- Adding 'Skip()' method.
- Adding 'virtual' qualifier for destructor.
- Fixing 'pure virtual call' bug when socket disconnected.

FLX:
- Adapting to vhanges in 'FLW'.

IDXBTR:
- Adding 'MarkAs...()' method.
- Adapting to new 'AUTO(x)' macros.